--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
             </li>
           </ul>
         </address>
+        <button class="mobile-head-menu" type="button">
+          <svg class="icon-mobile-head-menu" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
     <main class="hero-main">
       <section class="hero-section">
-        <div class="container">
+        <div class="container wrap-hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
         </div>
@@ -128,7 +133,7 @@
       </section>
 
       <section class="team-section">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="cards-team">
@@ -564,7 +569,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -645,6 +650,6 @@
           <button type="submit" class="backdrop-submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
