--- a/index.html
+++ b/index.html
@@ -63,6 +63,79 @@
           </svg>
         </button>
       </div>
+
+      <div class="mob-menu is-open">
+        <div class="mob-menu-modal">
+          <button type="button" class="modal-btn-close">
+            <svg class="mob-modal-btn-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <nav class="nav-mob">
+            <ul class="menu-mob">
+              <li class="mob-menu-item">
+                <a
+                  href="./index.html"
+                  class="mob-menu-link mob-menu-link-active"
+                  >Studio</a
+                >
+              </li>
+              <li class="mob-menu-item">
+                <a href="" class="mob-menu-link">Portfolio</a>
+              </li>
+              <li class="mob-menu-item">
+                <a href="" class="mob-menu-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <address class="mob-contact">
+          <ul class="mob-contact-list">
+            <li class="mob-contact-items">
+              <a href="tel:+110001111111" class="mob-contact-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mob-contact-items">
+              <a href="mailto:info@devstudio.com" class="mob-contact-link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <ul class="mob-card-social">
+          <li class="mob-card-soc-card">
+            <a href="#" target="_blank" class="team-card-soc-icon">
+              <svg class="team-card-soc-icon-style" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-card-soc-card">
+            <a href="#" target="_blank" class="team-card-soc-icon">
+              <svg class="team-card-soc-icon-style" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-card-soc-card">
+            <a href="#" target="_blank" class="team-card-soc-icon">
+              <svg class="team-card-soc-icon-style" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-card-soc-card">
+            <a href="#" target="_blank" class="team-card-soc-icon">
+              <svg class="team-card-soc-icon-style" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main class="hero-main">
@@ -569,7 +642,8 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop">
+
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -650,6 +724,6 @@
           <button type="submit" class="backdrop-submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
